# Forecast-Affluence-Gares-SNCF

./: .gitignore  README.md  pyproject.toml
src/config/: .env.example.py  constants.py  settings.py  setup_gcp.py
src/data_ingestion/: ferie_days.py  idfm_collect.py  weather_collect.py
