[project]
name = "forecast-affluence-gares-sncf"
version = "0.1.0"
description = ""
authors = [
    {name = "Ismael Madou",email = "ismael.madou-gagi-grema@etudiant.univ-reims.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "google-cloud-storage (>=3.4.1,<4.0.0)",
    "google-cloud-bigquery (>=3.38.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
